# document-lens

./: .env.example  .gitignore  AI-CONVERSATION.md  CHARTLENS_STARTER.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  DOCUMENTLENS_SETUP.md  Dockerfile  IMPLEMENTATION_PLAN.md  LEGAL.md  LICENSE  README.md  REPOSITORY_SPLIT.sh  STARTUP_GUIDE.md  cite-sight.html  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start-backend.sh  start-frontend.sh  start.sh  test_batch_processing.py
app/: main.py
app/analyzers/: __init__.py  domain_mapper.py  integrity_checker.py  keyword_analyzer.py  ner_analyzer.py  ngram_analyzer.py  sentiment_analyzer.py  structural_mismatch.py  suspicious_patterns.py  word_analysis.py  writing_quality.py
app/api/routes/: academic_analysis.py  advanced_text.py  analysis.py  batch.py  future_endpoints.py  semantic_analysis.py  text_analysis.py
app/core/: config.py
app/data/: ai_patterns.json
app/models/: schemas.py
app/services/: batch_service.py  document_processor.py  doi_resolver.py  url_verifier.py
backend/: DOCUMENTLENS_SETUP.md  README.md  REPOSITORY_SPLIT.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/analyzers/: __init__.py  readability.py  suspicious_patterns.py  word_analysis.py  writing_quality.py
backend/app/api/routes/: academic_analysis.py  analysis.py  future_endpoints.py  health.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: document_processor.py  doi_resolver.py  reference_extractor.py  url_verifier.py
docs/: README.md  research-batch-processing.md
docs/architecture/: API_ORCHESTRATION.md  INTEGRATION.md  MICROSERVICES_ARCHITECTURE.md  MIGRATION_PLAN.md  OVERVIEW.md
docs/future-services/: MEDIA-LENS.md  ORCHESTRATOR.md  PRESENTATION-LENS.md  RECORDING-LENS.md  SUBMISSION-LENS.md
docs/integration-examples/: python-sdk-integration.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: FileUpload.css  FileUpload.tsx  ProcessingOptions.css  ProcessingOptions.tsx  ProcessingProgress.css  ProcessingProgress.tsx  ResultsTabs.css  ResultsTabs.tsx
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
tests/: __init__.py  conftest.py  test_academic_analysis.py  test_files.py  test_health.py  test_semantic_analysis.py  test_text_analysis.py
